--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-fileupload": "^0.1.3",
     "fs.extra": "*",
     "helmet": "*",
+    "jimp": "^0.2.27",
     "log4js": "*",
     "morgan": "*",
     "serve-favicon": "*",
