--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "ejs-locals": "*",
     "express": "*",
     "express-fileupload": "^0.1.3",
+    "faced": "^1.2.0",
     "fs.extra": "*",
+    "gm": "^1.23.0",
     "helmet": "*",
-    "jimp": "^0.2.27",
     "log4js": "*",
     "morgan": "*",
     "serve-favicon": "*",
