DB and access implemented

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "*",
     "serve-favicon": "*",
     "serve-static": "*",
+    "sqlite3": "^3.1.8",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
